# poc-opentelemetry-nestjs-rust-queue

./: README.md  docker-compose.yml  test_publisher.http
nest-js/: .env.example  .eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
nest-js/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts  tracing.ts
nest-js/src/database/: _database.module.ts
nest-js/src/database/prisma/: prisma.service.ts  schema.prisma
nest-js/src/database/prisma/migrations/20250418143430_init/: migration.sql
nest-js/src/database/prisma/repositories/: user.repositories.ts
nest-js/src/database/prisma/seed/: seed.database.ts
nest-js/src/rabbitmq/: _rabbitmq.module.ts  consumer.controller.ts  publisher.service.ts
nest-js/src/rabbitmq/scripts/: send-message.ts
rust/: .env.example  Cargo.toml
rust/src/: consumer.rs  db.rs  main.rs
rust/src/lib/: trace_utils.rs
rust/src/queue/: rabbitmq.rs
